@@ -1104,7 +1104,7 @@
 
 	    <widget>
 	      <class>GtkButton</class>
-	      <name>button12</name>
+	      <name>cancel_progress_button</name>
 	      <can_default>True</can_default>
 	      <can_focus>True</can_focus>
 	      <accelerator>
